--- a/development.html
+++ b/development.html
@@ -37,6 +37,7 @@
 Максимальная ясность.
 
 Объясняй каждое своё действие, чтобы я понимал логику твоих предложений.
+        Обязательно, коментирую каждую строчку в коде чтобы я знал что ты делаешь!!
 Если нужно уточнить контекст, сначала спроси, а не предполагай.
 Работаем пошагово:
 
