--- a/index.html
+++ b/index.html
@@ -378,7 +378,105 @@ Reddit/Twitter: Мониторинг трендов.
 Разработка API для взаимодействия с другими платформами.
 Внедрение машинного обучения для прогнозов.
 
+Обязательно к выполнению!!!!!!!:
+Инструкция для получения информации не с Binance
+1. Выбор альтернативного источника
+Виртуальный трейдер должен получать данные из одного или нескольких следующих источников:
 
+CoinGecko API: Информация о ценах, объемах, рыночной капитализации и свечах.
+CryptoCompare API: Данные о текущих ценах, исторических свечах и индикаторах.
+Yahoo Finance API: Курсы криптовалют и исторические данные.
+Alpha Vantage API: Расширенные данные по ценам и техническим индикаторам.
+TradingView Webhooks: Сигналы с индикаторами и уровнями.
+Пример: Основной источник — CoinGecko API. Резервный источник — CryptoCompare API.
+
+2. Проверка доступности API
+Перед выполнением запроса трейдер проверяет доступность API, используя тестовый запрос.
+
+Пример: Для CoinGecko:
+
+bash
+Копировать код
+GET https://api.coingecko.com/api/v3/ping
+Ответ:
+
+json
+Копировать код
+{
+  "gecko_says": "(V3) To the Moon!"
+}
+Если API недоступен, переключиться на резервный источник.
+
+3. Получение данных
+3.1. Текущая цена
+Источник: CoinGecko API
+Запрос:
+bash
+Копировать код
+GET https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=usd
+Обработка ответа:
+json
+Копировать код
+{
+  "ethereum": {
+    "usd": 1892.74
+  }
+}
+Цена ETH: $1892.74.
+3.2. Исторические свечи
+Источник: CryptoCompare API
+Запрос:
+bash
+Копировать код
+GET https://min-api.cryptocompare.com/data/v2/histominute?fsym=ETH&tsym=USD&limit=10
+Обработка ответа:
+json
+Копировать код
+{
+  "Data": {
+    "Data": [
+      {"time": 1681818000, "open": 1890.00, "high": 1894.00, "low": 1885.00, "close": 1892.74}
+    ]
+  }
+}
+Первая свеча: Open $1890, Close $1892.74.
+3.3. Объемы и ликвидность
+Источник: CoinGecko API
+Запрос:
+bash
+Копировать код
+GET https://api.coingecko.com/api/v3/exchanges/binance
+Ответ:
+json
+Копировать код
+{
+  "name": "Binance",
+  "trade_volume_24h_btc": 500000
+}
+Объем торгов за 24 часа: 500,000 BTC.
+4. Логика обработки данных
+Полученные данные передаются для анализа (например, расчёт индикаторов, определение тренда).
+Если данные не соответствуют ожиданиям (например, задержка более 1 минуты), переключиться на резервный источник.
+Сравнить данные из двух источников для подтверждения точности (при необходимости).
+5. Аварийные сценарии
+Если все источники недоступны:
+
+Логировать ошибку и сообщить в систему мониторинга.
+Использовать данные из кеша или последние доступные значения.
+Если данные противоречивы:
+
+Отклонить сигнал и запросить данные заново через 30 секунд.
+Пример использования
+Виртуальный трейдер:
+Запрашивает цену ETH через CoinGecko API.
+Если цена доступна, отправляет её на анализ.
+Если CoinGecko недоступен, переключается на CryptoCompare API.
+Выводит результат:
+bash
+Копировать код
+Цена ETH: $1892.74.
+Объем за 24 часа: 500,000 BTC.
+Эта инструкция позволяет трейдеру работать без привязки к Binance, гибко переключаясь на альтернативные источники. Если нужно уточнить или добавить шаги, дайте знать!
 
 Применение опыта
 "Ты обязан использовать свои предыдущие выводы и результаты  в трейдинге скальпинга. Вспоминай, какие стратегии и индикаторы сработали лучше всего, и применяй их в работе."
