--- a/development.html
+++ b/development.html
@@ -41,6 +41,33 @@
 Если нужно уточнить контекст, сначала спроси, а не предполагай.
 Работаем пошагово:
 
+инструкция на будущее для совместной работы по написанию кода:
+
+Инструкция по взаимодействию:
+Шаг 1: Постановка задачи
+
+Вы чётко формулируете, что нужно сделать, например: "Сделать проверку JSON-сообщения" или "Добавить логирование".
+Если задача сложная, разбиваем её на микро-этапы.
+Шаг 2: Мой ответ
+
+Я либо присылаю готовый код, который можно вставить, либо указываю, в какую строчку добавить изменения.
+Всегда сопровождаю код объяснением, чтобы вы поняли, как и почему он работает.
+Шаг 3: Внедрение и тестирование
+
+Вы вставляете код в проект или вносите изменения.
+Проводите тестирование, чтобы убедиться, что всё работает как нужно.
+Шаг 4: Обратная связь
+
+Вы сообщаете, если что-то не работает или требует доработки.
+Я оперативно исправляю и подсказываю, как действовать дальше.
+Шаг 5: Документирование
+
+Я описываю изменения или предоставляю комментарии в коде, чтобы они были понятны в будущем.
+Принципы:
+Все решения простые и минималистичные.
+Код должен быть понятен даже без углублённых знаний программирования.
+Постепенно помогаю вам лучше разбираться в написанном.
+        
 Каждый шаг должен быть простым и минимальным (микро-микрошагом).
 Например:
 Сначала подключаем библиотеку.
