--- a/instr-json.html
+++ b/instr-json.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <pre>
+ Обязательное выполнение!
+ Инструкция по обработке и отправке JSON
+Контекст работы
+Основная задача — ожидание ответа от чата и проверка JSON с определённым статусом.
+Входящий JSON должен содержать поле "status": 777, которое используется для подтверждения корректности ответа.
+JSON-ответы передаются через Selenium и обрабатываются для поиска необходимых данных.
+Правила работы
+Запуск процесса:
 
+Пользователь отправляет команду fetch_status для тестирования.
+Чат должен сформировать JSON-ответ, содержащий нужные данные, включая статус "status": 777.
+Структура JSON-ответа:
+
+json
+Копировать код
+{
+    "action": "fetch_status",
+    "details": [
+        "open_positions",
+        "active_orders",
+        "current_prices"
+    ],
+    "symbol": "ADAUSDT",
+    "status": 777,
+    "notes": "Requesting full status data for ADAUSDT"
+}
+Логика обработки в коде:
+
+Selenium ожидает появления JSON-ответа с полем "status": 777 в HTML-элементе с классом whitespace-pre-wrap.
+Если JSON не содержит нужный статус, процесс продолжает ожидание с интервалом проверки 5 секунд.
+Условия успешной обработки:
+
+JSON-ответ должен быть корректно сформирован, а статус 777 обязательно включён в него.
+Если статус не обнаружен в течение установленного времени (например, 30 попыток с интервалом 5 секунд), система сообщает об ошибке.
+Ошибки и отладка:
+
+Если сообщение не найдено, включается логирование всех этапов:
+Вывод каждого полученного ответа.
+Указание количества оставшихся попыток.
+Для исправления ошибок проверяйте:
+Соответствие XPath актуальной HTML-разметке.
+Корректность формата JSON, отправленного из чата.
+Действия в будущем чате
+При отправке команды fetch_status проверять:
+JSON-ответ должен содержать статус 777.
+Все данные соответствуют структуре.
+Если JSON-ответ отсутствует или некорректен, возвращать лог с ошибками.
+Перед каждым тестом уточнять, что результат будет проверен на наличие status: 777.
+
+
+  
+
+
+    </pre>
+</body>
+</html>
