--- a/convension.html
+++ b/convension.html
@@ -1,1 +1,114 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <pre>
 
+
+Инструкция для трейдера в чате
+Для взаимодействия с мостом и платформой Binance необходимо придерживаться следующей конвенции форматов. Это упростит обработку запросов и позволит автоматически выполнять операции.
+
+Формат запросов
+1. Создание ордера
+Для открытия или закрытия позиции указывайте параметры следующим образом:
+
+php
+Копировать код
+<Команда>;<Торговая пара>;<Действие>;<Тип ордера>;<Цена>;<Количество>;<ID>
+Пример:
+Покупка (лонг):
+
+Копировать код
+TRADE;BTC/USDT;BUY;LIMIT;42000;0.5;777
+Продажа (шорт):
+
+Копировать код
+TRADE;BTC/USDT;SELL;MARKET;0;1;778
+Объяснение:
+
+TRADE — команда для открытия или закрытия позиции.
+BTC/USDT — пара актива.
+BUY/SELL — действие: покупка или продажа.
+LIMIT/MARKET — тип ордера: лимитный или рыночный.
+42000 — цена (для лимитного ордера, для рыночного оставить 0).
+0.5 — количество актива.
+777 — уникальный идентификатор запроса.
+2. Запрос информации
+Используйте следующую структуру для запроса данных:
+
+php
+Копировать код
+INFO;<Тип данных>;<Дополнительные параметры>;<ID>
+Пример:
+Получение баланса:
+
+wasm
+Копировать код
+INFO;BALANCE;;779
+Получение истории сделок:
+
+Копировать код
+INFO;TRADE_HISTORY;BTC/USDT;780
+Объяснение:
+
+INFO — команда для запроса данных.
+BALANCE — тип данных: баланс аккаунта.
+TRADE_HISTORY — история сделок (можно указать торговую пару).
+BTC/USDT — торговая пара (опционально).
+779/780 — уникальный идентификатор запроса.
+3. Отмена ордера
+Для отмены ранее созданного ордера используйте формат:
+
+php
+Копировать код
+CANCEL;<Торговая пара>;<ID ордера>;<ID>
+Пример:
+objectivec
+Копировать код
+CANCEL;BTC/USDT;10123456;781
+Объяснение:
+
+CANCEL — команда для отмены ордера.
+BTC/USDT — торговая пара.
+10123456 — идентификатор ордера.
+781 — уникальный идентификатор запроса.
+Общие правила
+Каждая команда должна иметь уникальный ID. Это нужно для отслеживания и обработки запросов.
+Ответы на запросы будут приходить в формате JSON. Пример ответа:
+json
+Копировать код
+{
+    "id": 777,
+    "status": "success",
+    "message": "Order executed",
+    "details": {
+        "pair": "BTC/USDT",
+        "type": "LIMIT",
+        "price": 42000,
+        "quantity": 0.5
+    }
+}
+Структура запроса должна строго соответствовать формату. Неправильный запрос будет отклонён.
+Примеры сценариев
+Создание рыночного ордера на покупку:
+
+Копировать код
+TRADE;ETH/USDT;BUY;MARKET;0;1;785
+Получение баланса аккаунта:
+
+wasm
+Копировать код
+INFO;BALANCE;;786
+Отмена лимитного ордера:
+
+objectivec
+Копировать код
+CANCEL;BTC/USDT;10123456;787
+Используйте эту инструкцию для работы с мостом. Если будут возникать вопросы — уточняйте правила запроса!
+    </pre>
+</body>
+</html>
