--- a/context_temp.html
+++ b/context_temp.html
@@ -1,4 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <pre>
 1. Вячеслав использует подход к разработке программ, разделяя задачи на микро-шаги:
    - Деление задач на подзадачи.
    - Проверка результата после выполнения каждой подзадачи.
@@ -1698,6 +1706,8 @@
 
 80. Поддержка работы с бинарными данными через API для специальных команд.
 
-
+    </pre>
+</body>
+</html>
 
 
