--- a/context_temp.html
+++ b/context_temp.html
@@ -1705,6 +1705,166 @@
 79. Реализация системы аналитики для всех взаимодействий с API и чатом.
 
 80. Поддержка работы с бинарными данными через API для специальных команд.
+1. Проект разрабатывается на .NET Core с использованием как веб-приложения (Web App), так и консольного приложения.
+
+2. Консольное приложение отвечает за взаимодействие с Selenium для управления веб-интерфейсом.
+
+3. Selenium используется для отправки команд и сообщений в чат через веб-браузер.
+
+4. Веб-приложение (Web App) будет служить интерфейсом для управления и настройки функционала.
+
+5. Веб-приложение должно поддерживать интеграцию с внешними API для передачи и получения данных.
+
+6. Взаимодействие между чатом и API будет осуществляться через NGROK для публичного доступа.
+
+7. Чат будет получать команды через API, предоставленные веб-приложением.
+
+8. API будет использоваться для отправки данных в чат и получения ответов от него.
+
+9. Чат должен поддерживать двухстороннюю связь: отправка данных и получение обратной связи.
+
+10. Проект должен учитывать возможность изменения структуры веб-страниц чата.
+
+11. Selenium должен использовать динамические селекторы для нахождения элементов.
+
+12. Проект предусматривает обработку уникальных идентификаторов сообщений для отслеживания состояния.
+
+13. Консольное приложение должно быть способно работать в автономном режиме.
+
+14. Веб-приложение должно поддерживать возможность конфигурации API через пользовательский интерфейс.
+
+15. Веб-приложение должно предоставлять возможность управления очередями задач.
+
+16. Поддержка работы с несколькими сессиями Selenium для параллельных запросов.
+
+17. Взаимодействие между компонентами должно быть синхронизировано по времени.
+
+18. Веб-приложение должно быть доступным для пользователей с различными уровнями доступа.
+
+19. Возможность автоматической отправки запросов в чат на основе триггеров.
+
+20. Консольное приложение должно записывать логи взаимодействия с Selenium.
+
+21. Использование токенов для авторизации API.
+
+22. Реализация системы защиты от несанкционированного доступа к API.
+
+23. Консольное приложение должно поддерживать команды для ручного управления Selenium.
+
+24. Веб-приложение должно предоставлять интерфейс для мониторинга состояния API и чата.
+
+25. Интеграция с системами мониторинга, такими как Prometheus или Grafana.
+
+26. Возможность отправки тестовых сообщений в чат для проверки соединения.
+
+27. Консольное приложение должно автоматически перезапускаться при сбоях.
+
+28. Веб-приложение должно предоставлять аналитические отчёты о взаимодействиях.
+
+29. Проект должен поддерживать расширение функционала через плагины.
+
+30. Веб-приложение должно быть оптимизировано для мобильных устройств.
+
+31. Возможность использования системы очередей для обработки сообщений.
+
+32. Интеграция с CI/CD для автоматизации развёртывания.
+
+33. Поддержка конфигурации API через JSON-файлы.
+
+34. Реализация возможности отправки массовых сообщений в чат.
+
+35. Веб-приложение должно поддерживать автоматическое обновление через API.
+
+36. Возможность добавления новых команд в консольное приложение без перекомпиляции.
+
+37. Использование WebSockets для моментальной отправки данных в чат.
+
+38. Консольное приложение должно быть лёгким и быстро запускаемым.
+
+39. Веб-приложение должно предоставлять возможность предварительного просмотра сообщений.
+
+40. Поддержка кастомизации интерфейса веб-приложения для различных пользователей.
+
+41. Возможность работы в режиме тестирования для проверки функционала.
+
+42. Использование различных окружений (development, staging, production).
+
+43. Реализация системы управления версиями API.
+
+44. Консольное приложение должно автоматически обновлять селекторы Selenium при изменении веб-страниц.
+
+45. Поддержка работы с несколькими аккаунтами в чате.
+
+46. Возможность добавления кастомных обработчиков для Selenium.
+
+47. Консольное приложение должно предоставлять интерфейс командной строки для управления.
+
+48. Реализация системы оповещений о сбоях в работе API или Selenium.
+
+49. Веб-приложение должно предоставлять функции для анализа производительности.
+
+50. Поддержка работы с локальными и удалёнными базами данных.
+
+51. Возможность создания резервных копий данных веб-приложения.
+
+52. Интеграция с системами учёта времени для расчёта производительности.
+
+53. Поддержка многоязычного интерфейса для веб-приложения.
+
+54. Реализация темизации интерфейса веб-приложения.
+
+55. Возможность работы в оффлайн-режиме для консольного приложения.
+
+56. Веб-приложение должно поддерживать уведомления через e-mail.
+
+57. Интеграция с системами управления проектами, такими как Jira или Trello.
+
+58. Поддержка экспортирования данных в различные форматы (CSV, JSON, XML).
+
+59. Консольное приложение должно поддерживать парсинг сложных структур данных.
+
+60. Реализация функции быстрого восстановления после сбоев.
+
+61. Веб-приложение должно быть защищено от SQL-инъекций и XSS.
+
+62. Возможность работы с распределёнными системами через API.
+
+63. Консольное приложение должно поддерживать пользовательские сценарии.
+
+64. Веб-приложение должно предоставлять отчёты о статусе работы API.
+
+65. Поддержка интеграции с платформами BI для анализа данных.
+
+66. Возможность создания и управления шаблонами запросов в веб-приложении.
+
+67. Консольное приложение должно поддерживать автоматическое обновление через веб-интерфейс.
+
+68. Реализация динамического управления потоком данных между API и чатом.
+
+69. Веб-приложение должно предоставлять визуализацию данных.
+
+70. Возможность настройки уровня логирования для отладки.
+
+71. Реализация системы обратной связи для пользователей веб-приложения.
+
+72. Поддержка кастомных скриптов для Selenium.
+
+73. Консольное приложение должно предоставлять инструкции для пользователей.
+
+74. Возможность интеграции с внешними системами авторизации.
+
+75. Поддержка модульного тестирования для всех компонентов.
+
+76. Реализация системы ограничений по частоте запросов к API.
+
+77. Веб-приложение должно предоставлять историю всех взаимодействий с чатом.
+
+78. Возможность работы в распределённой среде.
+
+79. Реализация системы аналитики для всех взаимодействий с API и чатом.
+
+80. Поддержка работы с бинарными данными через API для специальных команд.
+
 
     </pre>
 </body>
