--- a/context_temp.html
+++ b/context_temp.html
@@ -7,6 +7,228 @@
 </head>
 <body>
     <pre>
+
+Вот собранный контекст о разработке проекта на .NET Core Web Application, включая аспекты, которые мы с тобой обсуждали ранее:
+
+Основная цель проекта:
+
+Создать приложение на .NET Core Web Application, которое работает как мост между внешними пользователями и внутренними системами.
+Интеграция с Selenium для автоматизации взаимодействий с веб-интерфейсами.
+Поддержка API для работы с клиентами и другими сервисами.
+Функционал:
+
+Автоматизация: Использование Selenium для управления веб-страницами, отправки сообщений и выполнения автоматических действий в UI.
+API-интерфейс: Создание REST API, которое позволяет внешним системам передавать команды и получать данные.
+Динамическая обработка данных: Использование входящих запросов для генерации команд, отправляемых через Selenium.
+Логирование: Ведение логов всех взаимодействий для анализа и отладки.
+Мониторинг: Отслеживание состояния системы, ошибок и производительности.
+Основные компоненты:
+
+Веб-приложение:
+Интерфейс для управления задачами, мониторинга системы и настройки API.
+Работа с ролями пользователей для разграничения доступа.
+Консольное приложение:
+Ответственно за выполнение автоматизированных задач через Selenium.
+Работа в фоновом режиме с минимальным вмешательством пользователя.
+NGROK (или альтернативы): Для публичного доступа к локальному API в процессе разработки.
+Архитектура:
+
+Слой API: Обеспечивает обмен данными с внешними и внутренними системами.
+Слой автоматизации: Реализует бизнес-логику и управление Selenium.
+Слой интерфейса: Доступен для пользователя через браузер, предоставляет визуальный контроль над процессами.
+Технические особенности:
+
+Использование .NET Core 6+.
+Реализация асинхронных методов для API и Selenium.
+Работа с JSON-форматом для передачи данных.
+Возможность расширения через плагины или дополнительные модули.
+Интеграция с Selenium:
+
+Динамическая работа с элементами UI, обработка изменений на веб-страницах.
+Логика на основе уникальных идентификаторов сообщений и данных.
+Обсуждаемые задачи:
+
+Поддержка связи через NGROK (или выделенный статический IP).
+Организация взаимодействия между API и Selenium без лишней загрузки системы.
+Создание дежурных сообщений, отправляемых через Selenium в чат.
+Оптимизация производительности при работе с большим количеством входящих данных.
+
+
+
+
+
+        1. Реализация авторизации с использованием JWT токенов для API.
+
+2. Поддержка многопользовательской работы с различными уровнями доступа.
+
+3. Интеграция с системами аналитики (например, Google Analytics) для отслеживания пользовательской активности.
+
+4. Реализация механизма кэширования для уменьшения нагрузки на сервер.
+
+5. Возможность работы с большими объёмами данных через API-пагинацию.
+
+6. Поддержка нескольких языков интерфейса для глобального использования.
+
+7. Внедрение функции автоматической отправки отчётов через e-mail.
+
+8. Интеграция с системами OAuth для входа через соцсети.
+
+9. Возможность управления конфигурациями через веб-интерфейс.
+
+10. Разработка модулей тестирования производительности API.
+
+11. Веб-интерфейс для мониторинга всех активных сессий Selenium.
+
+12. Поддержка работы с несколькими инстансами Selenium одновременно.
+
+13. Возможность подключения дополнительных баз данных для хранения аналитики.
+
+14. Интеграция с облачными сервисами для хранения больших данных.
+
+15. Внедрение системы оповещений через Telegram или Slack.
+
+16. Поддержка подписки на события в API (webhooks).
+
+17. Создание интерфейса для управления ключами доступа к API.
+
+18. Разработка встроенного редактора JSON для тестирования запросов.
+
+19. Поддержка работы с бинарными файлами через API.
+
+20. Возможность запуска автоматических тестов API прямо из веб-интерфейса.
+
+21. Интеграция с CI/CD для автоматического развертывания обновлений.
+
+22. Реализация рефакторинга кода для повышения читаемости и производительности.
+
+23. Создание подробной документации API с примерами использования.
+
+24. Внедрение возможности управления задачами Selenium через UI.
+
+25. Использование контейнеризации (Docker) для запуска приложения.
+
+26. Оптимизация работы с памятью для обеспечения высокой производительности.
+
+27. Внедрение функциональности отслеживания выполнения запросов в реальном времени.
+
+28. Разработка системы работы с несколькими API одновременно.
+
+29. Реализация системы SLA для мониторинга доступности сервиса.
+
+30. Создание отдельного логического слоя для работы с внешними API.
+
+31. Интеграция с системами управления проектами, такими как Asana или Monday.
+
+32. Поддержка работы с файлами через API (загрузка, скачивание).
+
+33. Реализация системы восстановления после сбоев.
+
+34. Возможность работы с распределёнными вычислениями.
+
+35. Поддержка обработки изображений и других медиафайлов.
+
+36. Разработка механизма автоматического обновления данных в реальном времени.
+
+37. Внедрение системы модульного тестирования всех компонентов приложения.
+
+38. Оптимизация производительности API через индексацию базы данных.
+
+39. Реализация адаптивного интерфейса для работы на мобильных устройствах.
+
+40. Создание визуализации данных для аналитики.
+
+41. Интеграция с системами обработки текстов (например, Google Docs).
+
+42. Поддержка работы с веб-сокетами для мгновенного обновления данных.
+
+43. Разработка механизма автоматического обновления приложения.
+
+44. Возможность резервного копирования данных через API.
+
+45. Создание системы работы с событиями для обработки входящих данных.
+
+46. Интеграция с платформами электронной коммерции.
+
+47. Реализация возможности отслеживания активности пользователей.
+
+48. Поддержка работы с временными метками для логов.
+
+49. Создание функций для массовой загрузки данных.
+
+50. Интеграция с системами голосового управления.
+
+51. Разработка системы отслеживания метрик производительности.
+
+52. Внедрение механизма автоматической смены селекторов в Selenium.
+
+53. Возможность работы с распределёнными логами через API.
+
+54. Интеграция с платформами управления документами.
+
+55. Поддержка сложных аналитических запросов в API.
+
+56. Создание модулей обучения для пользователей веб-приложения.
+
+57. Разработка системы безопасного шифрования данных.
+
+58. Реализация интеграции с системами BI для построения дашбордов.
+
+59. Поддержка работы с геймификацией для улучшения взаимодействия с пользователями.
+
+60. Возможность анализа данных через AI и машинное обучение.
+
+61. Создание системы отчетов о состоянии API и Selenium.
+
+62. Поддержка работы с потоками данных в режиме реального времени.
+
+63. Разработка интерфейса для управления веб-интерфейсами Selenium.
+
+64. Внедрение многоуровневого логирования.
+
+65. Оптимизация работы с большими массивами данных через API.
+
+66. Поддержка работы с форматом YAML для конфигураций.
+
+67. Интеграция с системами видеоконференций.
+
+68. Создание функции для настройки частоты запросов к API.
+
+69. Разработка гибкой системы управления пользователями.
+
+70. Интеграция с системами двухфакторной аутентификации.
+
+71. Возможность автоматического переключения между аккаунтами в Selenium.
+
+72. Поддержка работы с электронными подписями.
+
+73. Создание визуальных сценариев для автоматизации в Selenium.
+
+74. Внедрение системы рекомендаций для пользователей.
+
+75. Реализация адаптации приложения к высокой нагрузке.
+
+76. Поддержка работы в офлайн-режиме с последующей синхронизацией данных.
+
+77. Возможность работы с системами предиктивной аналитики.
+
+78. Реализация системы аудита действий пользователей.
+
+79. Создание централизованной системы оповещений через API.
+
+80. Внедрение системы мониторинга API с интеграцией в UI.
+
+
+
+
+
+
+Особенности взаимодействия:
+
+
+Обработка команд по уникальным идентификаторам.
+Регулярное обновление логики для адаптации к изменению веб-страниц.
+Интеграция Web API с другими микросервисами.
+Если нужен более глубокий анализ или дополнения по какому-то конкретному пункту, дай знать!
 1. Вячеслав использует подход к разработке программ, разделяя задачи на микро-шаги:
    - Деление задач на подзадачи.
    - Проверка результата после выполнения каждой подзадачи.
