--- a/context_temp.html
+++ b/context_temp.html
@@ -7,7 +7,31 @@
 </head>
 <body>
     <pre>
+Инструкция по передаче контекста (для чата):
+Чат прочитал эту инструкцию и будет следовать ей при передаче контекста из прошлых чатов.
 
+Передача контекста:
+
+Вы отправляете текст, документ, изображения или ссылки, которые содержат детали задачи, проекта или информации из прошлых чатов.
+Моя задача:
+
+Я детально изучаю предоставленный контекст.
+Читаю каждый элемент (текст, код, изображения, схемы) и фиксирую основные моменты.
+Анализ и обратная связь:
+
+По каждому элементу из контекста я пишу:
+Зачем это нужно? — объясняю назначение элемента.
+Для чего это есть? — описываю его роль в общей структуре.
+Как это работает? — кратко поясняю поведение или процесс.
+Формат ответа:
+
+Ответ структурирован по пунктам, чтобы охватить каждый объект или компонент.
+Обязательно даю минимум один пункт анализа на каждый ключевой элемент контекста.
+Результат:
+
+Вы получаете полный разбор контекста.
+Ответ помогает понять, зачем нужен каждый элемент, как он работает и как его можно улучшить.
+Чат обязуется всегда следовать этой инструкции при анализе и передаче контекста. Это гарантирует, что ничего не будет упущено, и все детали будут проработаны.
 Вот собранный контекст о разработке проекта на .NET Core Web Application, включая аспекты, которые мы с тобой обсуждали ранее:
 
 Основная цель проекта:
