--- a/context_temp1.html
+++ b/context_temp1.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <pre>
+# Контекст проекта: Веб-приложение на .NET Core с использованием Selenium и Binance API
 
+## Цель
+Создать мост между ChatGPT и Binance для автоматизации трейдинга.
+
+## Завершённые шаги
+1. Создан базовый .NET Core проект.
+2. Реализован модуль Logger.
+3. Настроен SeleniumModule для работы с браузером.
+4. Подключён Swagger для тестирования API.
+
+## Текущий шаг
+Отправка дежурного сообщения в ChatGPT через Selenium.
+
+## Задачи
+- Настроить метод SendMessage для работы с ChatGPT.
+- Протестировать отправку сообщения через Swagger.
+
+## Замечания
+- Проверить корректность получения ответа от ChatGPT.
+- Убедиться, что сообщения логируются в Logger.
+      
+    </pre>
+</body>
+</html>
