--- a/context_temp1.html
+++ b/context_temp1.html
@@ -28,7 +28,48 @@
 ## Замечания
 - Проверить корректность получения ответа от ChatGPT.
 - Убедиться, что сообщения логируются в Logger.
-      
+      <pre>
+## Контекст проекта: Веб-приложение на .NET Core с использованием Selenium и Binance API
+
+## Цель
+Создать мост между ChatGPT и Binance для автоматизации трейдинга.
+
+## Завершённые шаги
+1. Создан базовый .NET Core проект.
+2. Реализован модуль Logger для записи логов.
+3. Настроен SeleniumModule для работы с браузером.
+4. Подключён Swagger для тестирования API.
+5. Реализован базовый BridgeController для тестирования.
+6. Добавлена структура для моделей (SignalModel, ResponseModel и др.).
+7. Протестировано базовое взаимодействие с API.
+8. В проекте настроена зависимость для BridgeModule.
+9. Добавлен метод для обработки сигналов через BridgeModule.
+10. Реализовано подключение к логированию в Program.cs.
+11. Настроен механизм передачи дежурных сообщений через Selenium.
+12. Создано описание для отправки сообщений в ChatGPT через Selenium.
+13. Добавлены тесты для обработки JSON данных в BridgeModule.
+14. Протестирована передача данных через Swagger для всех модулей.
+15. Настроен метод Navigate для перехода по ссылкам в SeleniumModule.
+
+## Текущий шаг
+Отправка дежурного сообщения в ChatGPT через Selenium.
+
+## Задачи
+- Настроить метод SendMessage для работы с ChatGPT.
+- Протестировать отправку сообщения через Swagger.
+- Обновить логику работы с SignalModel для поддержки новых типов данных.
+
+## Замечания
+- Проверить корректность получения ответа от ChatGPT.
+- Убедиться, что сообщения логируются в Logger.
+- Обновить тесты для новых методов.
+
+## Примечания
+- Не забыть проверять работоспособность Selenium перед использованием.
+- Поддерживать зависимость в Program.cs для всех модулей.
+- Сохранять регулярные бэкапы проекта.
+</pre>
+
     </pre>
 </body>
 </html>
