--- a/context_temp1.html
+++ b/context_temp1.html
@@ -70,6 +70,66 @@
 - Сохранять регулярные бэкапы проекта.
 </pre>
 
+### Общая информация о проекте и его текущем состоянии:
+
+#### Введение
+1. Проект предназначен для создания веб-приложения на .NET Core с интеграцией Selenium и Binance API.
+2. Основная цель проекта – автоматизация трейдинга через взаимодействие с ChatGPT и Binance.
+3. Используются технологии: ASP.NET Core, Selenium WebDriver, Swagger для тестирования API.
+4. Реализована структура для работы с данными через модули (BinanceModule, BridgeModule, ChatModule и SeleniumModule).
+
+#### Реализованные шаги:
+1. Создано базовое .NET Core приложение.
+2. Настроен логгер для записи событий приложения в лог-файл.
+3. Подключён Selenium для работы с браузером.
+4. Настроены базовые контроллеры для работы API (BridgeController, SeleniumController).
+5. Подключён Swagger для тестирования API методов.
+6. Реализована возможность отправки запросов к ChatGPT через Selenium.
+7. Обработаны модели данных (SignalModel, MarketDataModel, ResponseModel).
+8. Добавлены JSON-файлы для хранения тестовых данных (MarketData.json, TradeHistory.json).
+9. Настроен метод для отправки тестовых сообщений в ChatGPT.
+10. Реализован маршрут для обработки сигналов через BridgeModule.
+11. Проведены успешные тесты на отправку сообщений через API.
+
+#### Задачи для команды:
+
+##### Архитекторы
+1. Проанализировать текущую структуру и предложить улучшения в масштабируемости проекта.
+2. Определить зависимости между модулями и проверить корректность их внедрения через Dependency Injection.
+3. Подготовить список рекомендаций для работы с Binance API.
+
+##### Разработчики (Backend)
+1. Дополнить модули методами для обработки более сложных сценариев трейдинга.
+2. Оптимизировать код SeleniumModule для работы с различными браузерами.
+3. Улучшить логирование, чтобы фиксировать подробные действия каждого модуля.
+4. Реализовать механизм ретрая в случае неудачных попыток отправки сообщений.
+5. Провести интеграцию с реальным Binance API (пока используется тестовая среда).
+
+##### Аналитики
+1. Собрать требования по конечным сценариям трейдинга.
+2. Определить KPI для успешного завершения каждой операции.
+3. Подготовить документацию для дальнейшей передачи проекта другим разработчикам.
+
+#### Вопросы и ответы:
+1. Как работает мост между ChatGPT и Binance?
+   - Через Selenium отправляется сообщение в браузере, который общается с ChatGPT. Ответ ChatGPT обрабатывается в приложении и передаётся в Binance через API.
+2. Как настроены модули?
+   - Модули настроены как Singleton-объекты через Dependency Injection.
+3. Какие шаги планируются?
+   - Автоматизация сценариев на Binance.
+   - Внедрение системы уведомлений для пользователя.
+   - Расширение логики работы с сигналами через BridgeModule.
+
+#### Предложения для улучшения:
+1. Добавить поддержку нескольких браузеров в SeleniumModule.
+2. Реализовать систему тестов для всех API маршрутов.
+3. Интегрировать базу данных для хранения трейдинговой информации.
+4. Автоматизировать процесс обновления токенов для доступа к API.
+
+Каждый из участников команды может дополнить файл своими пунктами на основе вышеизложенного или добавить свои выводы.
+
+
+        
     </pre>
 </body>
 </html>
